k8s/saphira-observability.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: saphira-monitoring
  labels:
    tier: observability

---
# PROMETHEUS DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  namespace: saphira-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.44.0
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: prometheus-storage-volume
              mountPath: /prometheus/
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf
  volumeClaimTemplates:
    - metadata:
        name: prometheus-storage-volume
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 20Gi
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: saphira-monitoring
spec:
  selector: 
    app: prometheus
  ports:
    - port: 8080
      targetPort: 9090
---
# GRAFANA DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: saphira-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:10.0.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-storage-volume
  volumeClaimTemplates:
    - metadata:
        name: grafana-storage-volume
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: saphira-monitoring
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
